--- a/src/main/resources/assets/xp_shop/lang/en_us.json
+++ b/src/main/resources/assets/xp_shop/lang/en_us.json
@@ -22,18 +22,27 @@
   "item.xp_shop.upgrade_universal_buy": "Upgrade: Universal Buy",
   "item.xp_shop.upgrade_universal_sell": "Upgrade: Universal Sell",
   "item.xp_shop.upgrade_transfer": "Upgrade: XP Transfer",
+  "item.xp_shop.upgrade_fee": "Upgrade: Fee removal",
   "item.xp_shop.upgrade_wealthy": "Upgrade: Wealthy Traders",
 
   "__comment": "This will be for item descriptions",
+  "item.xp_shop.unlocked": "UNLOCKED",
   "xp_shop.desc.wallet": "This will increase your wallet size to:",
-  "xp_shop.desc.upgrade_options": "UPGRADE: See the rest of the shop",
-  "xp_shop.desc.upgrade_universal_buy": "UPGRADE: Buy items anywhere",
-  "xp_shop.desc.upgrade_universal_sell": "UPGRADE: Sell items anywhere",
-  "xp_shop.desc.upgrade_transfer": "UPGRADE: Transfer XP to other players",
-  "xp_shop.desc.upgrade_wealthy": "UPGRADE: Traders will have more xp than usual",
+  "xp_shop.desc.upgrade_options": "See the rest of the shop",
+  "xp_shop.desc.upgrade_universal_buy": "Buy items anywhere (right-click air)",
+  "xp_shop.desc.upgrade_universal_sell": "Sell items anywhere (right-click air)",
+  "xp_shop.desc.upgrade_transfer": "Transfer XP to other players",
+  "xp_shop.desc.upgrade_fee": "Removes initial shop fee",
+  "xp_shop.desc.upgrade_wealthy": "Traders will have more xp than usual",
   
   "__comment": "This is for chat messages",
   "xp_shop.chat.tier_low": "Your tier is too low",
-  "xp_shop.chat.have_upgrade": "You already have this upgrade"
-
+  "xp_shop.chat.unlock.upgrade_wallet": "Huzzah! Your XP limit has increased to: ",
+  "xp_shop.chat.have_upgrade": "You already have this upgrade",
+  "xp_shop.chat.unlock.upgrade_options": "You've unlocked More Options!",
+  "xp_shop.chat.unlock.upgrade_universal_buy": "You've unlocked Universal Buy!",
+  "xp_shop.chat.unlock.upgrade_universal_sell": "You've unlocked Universal Sell!",
+  "xp_shop.chat.unlock.upgrade_transfer": "You've unlocked XP Transfer!",
+  "xp_shop.chat.unlock.upgrade_fee": "You've unlocked Fee Removal!",
+  "xp_shop.chat.unlock.upgrade_wealthy": "You've unlocked Wealthy Traders!"
 }
