Additions - Added /xpshop buy and /xpshop sell commands
Changes
- Made it so the shop keybind only works if you have level 2(you can use cheats) permissions or higher
- You can now disable the shop fee by setting it to 0

--- a/src/main/resources/assets/xp_shop/lang/en_us.json
+++ b/src/main/resources/assets/xp_shop/lang/en_us.json
@@ -44,5 +44,6 @@
   "xp_shop.chat.unlock.upgrade_universal_sell": "You've unlocked Universal Sell!",
   "xp_shop.chat.unlock.upgrade_transfer": "You've unlocked XP Transfer!",
   "xp_shop.chat.unlock.upgrade_fee": "You've unlocked Fee Removal!",
-  "xp_shop.chat.unlock.upgrade_wealthy": "You've unlocked Wealthy Traders!"
+  "xp_shop.chat.unlock.upgrade_wealthy": "You've unlocked Wealthy Traders!",
+  "xp_shop.chat.shop.cant_open_shop": "Player is dead or dying, can't open shop."
 }
