Added - Config to relock items when deals refresh - /xpshop refresh command to refresh deals and item stock
Fixes
- Stock and unlocked items wasn't being cleared when syncing client and server data

--- a/src/main/resources/assets/xp_shop/lang/en_us.json
+++ b/src/main/resources/assets/xp_shop/lang/en_us.json
@@ -45,5 +45,7 @@
   "xp_shop.chat.unlock.upgrade_transfer": "You've unlocked XP Transfer!",
   "xp_shop.chat.unlock.upgrade_fee": "You've unlocked Fee Removal!",
   "xp_shop.chat.unlock.upgrade_wealthy": "You've unlocked Wealthy Traders!",
-  "xp_shop.chat.shop.cant_open_shop": "Player is dead or dying, can't open shop."
+  "xp_shop.chat.shop.cant_open_shop": "Player is dead or dying, can't open shop.",
+  "xp_shop.chat.shop.refresh": "Shop item stock has been refreshed!",
+  "xp_shop.chat.shop.refresh.all": "Shop deals and item stock has been refreshed for everyone!"
 }
